# iocom

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  iocom.h  iocomx.h  iodomain.h  library.json  platformio.ini  readme.txt
applications/iodomain/: CMakeLists.txt  readme.txt
applications/iodomain/code/: iodomain_main.c  iodomain_main.h
code/: CMakeLists.txt  ioc_authentication.c  ioc_authentication.h  ioc_auto_device_nr.c  ioc_auto_device_nr.h  ioc_bitmap.c  ioc_bitmap.h  ioc_brick.c  ioc_brick.h  ioc_checksum.c  ioc_checksum.h  ioc_com_status.c  ioc_com_status.h  ioc_compress.c  ioc_compress.h  ioc_connection.c  ioc_connection.h  ioc_connection_receive.c  ioc_connection_send.c  ioc_debug.h  ioc_dyn_mblk_list.c  ioc_dyn_mblk_list.h  ioc_dyn_network.c  ioc_dyn_network.h  ioc_dyn_queue.c  ioc_dyn_queue.h  ioc_dyn_root.c  ioc_dyn_root.h  ioc_dyn_signal.c  ioc_dyn_signal.h  ioc_end_point.c  ioc_end_point.h  ioc_establish_serial_connection.c  ioc_handle.c  ioc_handle.h  ioc_handshake.c  ioc_handshake.h  ioc_handshake_iocom.c  ioc_handshake_iocom.h  ioc_identifiers.c  (+38 more)
examples/buster/: CMakeLists.txt  compile_commands.json  platformio.ini  readme.txt
examples/buster/calc/: steering.py
examples/buster/code/: app_iodevice_candy.cpp  app_iodevice_gina.cpp  application.cpp  application.h  application_root.h  blink_sequence.cpp  blink_sequence.h  blinkit.cpp  blinkit.h  buster.h  buster.ino  camera.cpp  camera.h  config.c  escconf_sequence.cpp  escconf_sequence.h  main.cpp  main.h  minion.cpp  minion.h  sequence_base_class.cpp  sequence_base_class.h
examples/buster/scripts/: config_to_c_code.py
examples/buster/wisecrack/: poem1.txt  poem2.txt  poem3.txt  poem4.txt  poem5.txt  poem6.txt  poem7.txt  poem8.txt  poem9.txt  quote1.txt  quote2.txt  quote3.txt  quote4.txt  quote5.txt  quote6.txt  quote7.txt  quote8.txt  quote9.txt
examples/certificates/: CMakeLists.txt  certificate_utilities_example.txt
examples/certificates/code/: certificates_example_main.c  certificates_example_main.h  generate_certificate_request.c  generate_own_server_certificate.c  generate_root_certificate.c  generate_root_key.c  generate_server_key.c
examples/claudia/: CMakeLists.txt  readme.txt
examples/claudia/code/: app_config.c  app_instance.cpp  app_instance.h  app_main.cpp  app_main.h  app_root.cpp  app_root.h
examples/claudia/scripts/: config-to-c-code.py  config-to-c-code.sh  config_to_c_code.py
examples/frank/: CMakeLists.txt  readme.txt
examples/frank/code/: app_config.c  app_instance.cpp  app_instance.h  app_main.cpp  app_main.h  app_root.cpp  app_root.h  config.c  config.cpp  frank.cpp  frank.h  frank_accounts.cpp  frank_accounts.h  frank_application.cpp  frank_application.h  frank_get_netconf.cpp  frank_get_netconf.h  frank_main.cpp  frank_main.h
examples/frank/retiredcode/: frank-signals.json
examples/frank/scripts/: config-to-c-code.bat  config-to-c-code.py  config-to-c-code.sh  config_to_c_code.py
examples/minion/: CMakeLists.txt  platformio.ini  readme.txt
examples/minion/code/: config.c  minion.c  minion.h  minion.ino
examples/minion/config/: readme.txt
examples/minion/scripts/: config_to_c_code.py  copy_esp32_devki1_package.py  copy_esp32_espcam_package.py  make_linux_amd64_package.py
examples/tealight/code/: CMakeLists.txt  config.c  main-espidf-platformio.c  tealight.c  tealight.h
examples/tito/: CMakeLists.txt  platformio.ini  readme.txt
examples/tito/code/: app_config.c  app_config.cpp  app_instance.cpp  app_instance.h  app_iodevice.cpp  app_iodevice.h  app_iodevice_candy.cpp  app_iodevice_candy.h  app_iodevice_gina.cpp  app_iodevice_gina.h  app_main.cpp  app_main.h  app_root.cpp  app_root.h  app_seq.cpp  app_seq.h  app_seq_blink_led.cpp  app_seq_blink_led.h  application_root.cpp  application_root.h  config.cpp  controller_config.c  controller_main.cpp  controller_main.h  controller_root.cpp  controller_root.h  iocontroller_example.ukemi  iodevice_base_class.cpp  sequence_base_class.cpp  sequence_base_class.h  tito.cpp  tito.h  tito.ino  tito_application.cpp  tito_application.h  tito_gina_io_device.cpp  tito_gina_io_device.h  tito_io_device.cpp  tito_io_device.h  tito_main.cpp  (+8 more)
examples/tito/scripts/: config-to-c-code.py  config-to-c-code.sh  config_to_c_code.py  signal-config-to-c-code.sh
examples/tito/scripts (copy)/: config-to-c-code.bat
examples/uno/: CMakeLists.txt  platformio.ini  readme.txt
examples/uno/code/: config.c  uno.c  uno.cpp  uno.h  uno_platformio.ino
examples/uno/firmware/: 210124-uno-firmware.elf  210124-uno-firmware.hex
examples/uno/scripts/: config_to_c_code.py
extensions/devicedir/code/: CMakeLists.txt  devicedir_basic.c  devicedir_basic.h  devicedir_configure.c  devicedir_connections.c  devicedir_console.c  devicedir_console.h  devicedir_dynamic.c  devicedir_end_points.c  devicedir_get_json.c  devicedir_get_json.h  devicedir_helper.c  devicedir_info.c  devicedir_memory_blocks.c  devicedir_overdrives.c  devicedir_print_mblk.c  devicedir_shared.h
extensions/deviceinfo/: CMakeLists.txt  deviceinfo.h  library.json  platformio.ini  readme.txt
extensions/deviceinfo/code/: CMakeLists.txt  deviceinfo_node_conf.c  deviceinfo_node_conf.h  deviceinfo_resource_monitor.c  deviceinfo_resource_monitor.h  deviceinfo_system_specs.c  deviceinfo_system_specs.h
extensions/deviceinfo/scripts/: copy_deviceinfo_for_duino.py
extensions/iocompython/: CMakeLists.txt  iocompython.h  readme.txt
extensions/iocompython/code/: dulle.oldh  io_py_connect.c  io_py_connect.h  io_py_memblk.c  io_py_memblk.h  iopy_brick_buffer.c  iopy_brick_buffer.h  iopy_connection.c  iopy_connection.h  iopy_end_point.c  iopy_end_point.h  iopy_memory_block.c  iopy_memory_block.h  iopy_module.c  iopy_module.h  iopy_root.c  iopy_root.h  iopy_signal.c  iopy_signal.h  iopy_stream.c  iopy_stream.h  iopy_util.c  iopy_util.h
extensions/iocompython/scripts/: start-qtcreator-for-python-debug.sh
extensions/ioserver/: CMakeLists.txt  ioc_accounts.c  ioc_accounts.h  ioc_basic_server.c  ioc_basic_server.h  ioc_server_util.c  ioserver.h  readme.txt
(+993 files in other folders)
